<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.PokemonInformationFragments.PokemonStatsFragment">

   <androidx.cardview.widget.CardView
       android:id="@+id/rectangleMark"
       android:layout_marginLeft="16dp"
       android:layout_marginRight="16dp"
       android:layout_marginTop="20dp"
       android:layout_marginBottom="20dp"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:cardCornerRadius="8dp"
       app:cardElevation="0dp"
       app:cardBackgroundColor="@android:color/white">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical">

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hpPokemonStat"
                android:textSize="15sp">

            </TextView>

            <ProgressBar
                android:id="@+id/hpProgressBar"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="4dp"
                android:layout_gravity="center_vertical"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:scaleY="6">

            </ProgressBar>

         </LinearLayout>

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attackPokemonStat"
                android:textSize="15sp">

            </TextView>

            <ProgressBar
                android:id="@+id/attackProgressBar"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="4dp"
                android:layout_gravity="center_vertical"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:scaleY="6">

            </ProgressBar>

         </LinearLayout>

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defensePokemonStat"
                android:textSize="15sp">

            </TextView>

            <ProgressBar
                android:id="@+id/defenseProgressBar"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="4dp"
                android:layout_gravity="center_vertical"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:scaleY="6">

            </ProgressBar>

         </LinearLayout>

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/specialAttackPokemonStat"
                android:textSize="15sp">

            </TextView>

            <ProgressBar
                android:id="@+id/specialAttackProgressBar"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="4dp"
                android:layout_gravity="center_vertical"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:scaleY="6">

            </ProgressBar>

         </LinearLayout>

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/specialDefensePokemonStat"
                android:textSize="15sp">

            </TextView>

            <ProgressBar
                android:id="@+id/specialDefenseProgressBar"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="4dp"
                android:layout_gravity="center_vertical"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:scaleY="6">

            </ProgressBar>

         </LinearLayout>

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speedPokemonStat"
                android:textSize="15sp">

            </TextView>

            <ProgressBar
                android:id="@+id/speedProgressBar"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="4dp"
                android:layout_gravity="center_vertical"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:scaleY="6">

            </ProgressBar>

         </LinearLayout>

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/totalPokemonStat"
                android:textSize="15sp">

            </TextView>

            <ProgressBar
                android:id="@+id/totalProgressBar"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="4dp"
                android:layout_gravity="center_vertical"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:scaleY="6">

            </ProgressBar>

         </LinearLayout>

      </LinearLayout>





   </androidx.cardview.widget.CardView>



</FrameLayout>